--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
-<div>123</div>
-
 <script type="module" src="./src/main.js"></script>
 </body>
 </html>
