--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-<script type="module" src="./src/main.js"></script>
+<script type="module" src="src/index4.js"></script>
 </body>
 </html>
